tests/fixtures/invalid/bytes_lshift_set.py
# Cannot left shift Bytes and Set[int]
x: bytes = b"hello" << {1, 2, 3}
